# fftwpp

./: .gitignore  CMakeLists.txt  README.md  README.rst  cmake_build_and_install.bat
docs/: .buildinfo  cpp_api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  py_api.html  search.html  searchindex.js  theory.html  tutorial.html
docs/.doctrees/: cpp_api.doctree  environment.pickle  index.doctree  installation.doctree  py_api.doctree  theory.doctree  tutorial.doctree
docs/.doctrees/benchmarks/: benchmarks.doctree
docs/_downloads/14f7ed24ab0ece211d2bf7482dd6ddaf/: benchmarks.ipynb
docs/_downloads/7fbeb856cb6ad689011f26624be656f0/: CMakelists.txt
docs/_sources/: cpp_api.rst.txt  index.rst.txt  installation.rst.txt  py_api.rst.txt  tutorial.rst.txt
docs/_sources/benchmarks/: benchmarks.rst.txt
docs/_static/: bizstyle.js
docs/benchmarks/: benchmarks.html
docs/breathe/doxygen/: fftwpp.cfg
example/: CMakelists.txt  example_fftwpp.cpp
include/: CMakeLists.txt
include/fftwpp/: fftwpp.hpp
metadata/: description.txt  repository.txt
python/: CMakeLists.txt  demo.py  pyfftwpp.cpp  setup.cfg  setup.py
python/docstrings/: init_threads.txt  pyfftwpp.txt
python/docstrings/Plan/: Plan.txt  flops.txt
python/docstrings/PlanFactory/: PlanFactory.txt  create_plan-c2c.txt  create_plan-c2r.txt  create_plan-r2c.txt  flags.txt
python/pyfftwpp/: __init__.py  pyfftwpp.cpp
python/tests/: test_plan_factory.py  test_pyfftwpp.py
sphinx/: conf.py  index.rst  installation.rst  py_api.rst  theory.rst  tutorial.rst
sphinx/benchmarks/: fftw_openmp_81_3d.csv  numpy_vs_fftw_1d.csv
sphinx/cpp_tutorial/: CMakelists.txt  README.md  tutorial.cpp
sphinx/py_tutorial/: tutorial.py
src/: CMakeLists.txt  config.cmake.in  fftwpp.cpp
tests/: CMakeLists.txt  test_fftwpp.cpp
(+11 files in other folders)
